--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: ruby
 sudo: required
 dist: trusty
 rvm:
-  - 2.5.1
-before_install: gem install bundler -v 1.16.0
+  - 2.6.4
+before_install: gem install bundler
 before_script:
   - cp config/application.yml.example config/application.yml
   - cp config/database.yml.example config/database.yml
